fix: improve navigation logic and prevent rate limiting
This commit introduces several improvements to the topic navigation logic.

- Increases the default throttle interval to 1000ms in  to better align with Discourse rate limits.
- Adds a  to enforce a safe minimum.
- Implements a URL cache () to prevent redundant processing of the same URL during page changes.
- Throttles the scroll-to-top behavior on post changes to avoid excessive calls.
- Refines the navigation logic in  to avoid unnecessary routing when already on the correct page.
- Improves error handling to avoid a page reload when a 429 (rate-limited) error occurs.

--- a/settings.yml
+++ b/settings.yml
@@ -10,5 +10,5 @@ exclude_user_groups:
 
 throttle_interval:
   type: integer
-  default: 300
-  description: "Throttle interval in milliseconds to prevent API overload" 
+  default: 1000
+  description: "Throttle interval in milliseconds (minimum 1000ms to prevent rate limiting)" 
